# DRF_project

./: .dockerignore  .env  .flake8  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  myapp_nginx.conf  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
courses/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/fixtures/: courses.json  lessons.json
courses/migrations/: 0001_initial.py  0002_alter_course_preview.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_course_updated_at.py
courses/tests/: test_models.py
static/: index.html
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json  payments.json  users.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_user_username.py  0004_alter_user_username.py
